{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 102,
  "lineage": "48d27250-8f5b-04a1-a1ae-7fc6f3c4d7c5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00441f6ac88e6ae2d",
            "association_id": "eipassoc-0f0ec483765eff652",
            "domain": "vpc",
            "id": "eipalloc-00441f6ac88e6ae2d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08d5b8d07352aa854",
            "private_dns": "ip-10-0-0-177.ec2.internal",
            "private_ip": "10.0.0.177",
            "public_dns": "ec2-52-5-192-2.compute-1.amazonaws.com",
            "public_ip": "52.5.192.2",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main-nat0"
            },
            "tags_all": {
              "Name": "main-nat0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffd0edb2c9db035e",
            "association_id": "eipassoc-0a137c8dc9209898e",
            "domain": "vpc",
            "id": "eipalloc-0ffd0edb2c9db035e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-024a0e97334f959b8",
            "private_dns": "ip-10-0-1-204.ec2.internal",
            "private_ip": "10.0.1.204",
            "public_dns": "ec2-3-223-202-79.compute-1.amazonaws.com",
            "public_ip": "3.223.202.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "main-nat1"
            },
            "tags_all": {
              "Name": "main-nat1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d56f8956ab235b3",
            "arn": "arn:aws:ec2:us-east-1:003729975368:instance/i-09016d7d83845a36e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09016d7d83845a36e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "virginaR53keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-017b95aa448fe8f3a",
            "private_dns": "ip-10-0-0-159.ec2.internal",
            "private_ip": "10.0.0.159",
            "public_ip": "3.86.111.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e3a58ad3ea94b3f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0447b8d358abd2027"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be820798b40b4dfb",
            "tags": {
              "Name": "main-ubuntu"
            },
            "tags_all": {
              "Name": "main-ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0447b8d358abd2027"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:internet-gateway/igw-014bf422292d64348",
            "id": "igw-014bf422292d64348",
            "owner_id": "003729975368",
            "tags": {
              "Name": "main-internet-gateway"
            },
            "tags_all": {
              "Name": "main-internet-gateway"
            },
            "vpc_id": "vpc-0454a4e316d161daa"
          },
          "dependencies": [
            "aws_vpc.my-main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00441f6ac88e6ae2d",
            "connectivity_type": "public",
            "id": "nat-01659a28ce2a1610e",
            "network_interface_id": "eni-08d5b8d07352aa854",
            "private_ip": "10.0.0.177",
            "public_ip": "52.5.192.2",
            "subnet_id": "subnet-0be820798b40b4dfb",
            "tags": {
              "Name": "main-nat0"
            },
            "tags_all": {
              "Name": "main-nat0"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.my-main-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffd0edb2c9db035e",
            "connectivity_type": "public",
            "id": "nat-03cd389bd38360851",
            "network_interface_id": "eni-024a0e97334f959b8",
            "private_ip": "10.0.1.204",
            "public_ip": "3.223.202.79",
            "subnet_id": "subnet-085e52117e68118ba",
            "tags": {
              "Name": "main-nat1"
            },
            "tags_all": {
              "Name": "main-nat1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.my-main-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:route-table/rtb-08a8587ea9b07dcb6",
            "id": "rtb-08a8587ea9b07dcb6",
            "owner_id": "003729975368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01659a28ce2a1610e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private0"
            },
            "tags_all": {
              "Name": "main-private0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0454a4e316d161daa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.my-main-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:route-table/rtb-0c37bae1cd7a70525",
            "id": "rtb-0c37bae1cd7a70525",
            "owner_id": "003729975368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03cd389bd38360851",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private1"
            },
            "tags_all": {
              "Name": "main-private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0454a4e316d161daa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.my-main-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:route-table/rtb-01d95565c40d040ab",
            "id": "rtb-01d95565c40d040ab",
            "owner_id": "003729975368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014bf422292d64348",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public"
            },
            "tags_all": {
              "Name": "main-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0454a4e316d161daa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_internet_gateway",
            "aws_vpc.my-main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d7cc2fc12635518",
            "route_table_id": "rtb-01d95565c40d040ab",
            "subnet_id": "subnet-0be820798b40b4dfb"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.my-main-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0a0443bec405e09",
            "route_table_id": "rtb-01d95565c40d040ab",
            "subnet_id": "subnet-085e52117e68118ba"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.my-main-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a86e9f9ece5aba6",
            "route_table_id": "rtb-08a8587ea9b07dcb6",
            "subnet_id": "subnet-0973cac78e9285228"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.my-main-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020ead23f84fc5041",
            "route_table_id": "rtb-0c37bae1cd7a70525",
            "subnet_id": "subnet-086ea2d55091f5044"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.my-main-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:security-group/sg-0447b8d358abd2027",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0447b8d358abd2027",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh to VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-instance",
            "name_prefix": "",
            "owner_id": "003729975368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-allows-ssh"
            },
            "tags_all": {
              "Name": "main-allows-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0454a4e316d161daa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:subnet/subnet-0973cac78e9285228",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0973cac78e9285228",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003729975368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private0"
            },
            "tags_all": {
              "Name": "main-private0"
            },
            "vpc_id": "vpc-0454a4e316d161daa"
          },
          "dependencies": [
            "aws_vpc.my-main-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:subnet/subnet-086ea2d55091f5044",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086ea2d55091f5044",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003729975368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private1"
            },
            "tags_all": {
              "Name": "main-private1"
            },
            "vpc_id": "vpc-0454a4e316d161daa"
          },
          "dependencies": [
            "aws_vpc.my-main-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:subnet/subnet-0be820798b40b4dfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be820798b40b4dfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003729975368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public0"
            },
            "tags_all": {
              "Name": "main-public0"
            },
            "vpc_id": "vpc-0454a4e316d161daa"
          },
          "dependencies": [
            "aws_vpc.my-main-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:subnet/subnet-085e52117e68118ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085e52117e68118ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003729975368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public1"
            },
            "tags_all": {
              "Name": "main-public1"
            },
            "vpc_id": "vpc-0454a4e316d161daa"
          },
          "dependencies": [
            "aws_vpc.my-main-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:vpc/vpc-0454a4e316d161daa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-043700f55b48a41d6",
            "default_route_table_id": "rtb-0578e14ed69f8c737",
            "default_security_group_id": "sg-08a8dcd4828d90744",
            "dhcp_options_id": "dopt-042d5efc6a18ed39b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0454a4e316d161daa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0578e14ed69f8c737",
            "owner_id": "003729975368",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}